--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   </figcaption>
     </figure>
-  </section>
+ 
   <article>
     
         <!-- Turn this div into an article tag-->
@@ -43,7 +43,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
         </div>
       </article>
-
+ </section>
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
   <section>
 
@@ -98,7 +98,7 @@
       <!-- Replace the following div with a details tag -->
       <details>
         <!-- Replace the following span with a summary tag -->
-        <span>&copy; 2014 Exceptional Realty.</span>
+        <summary>&copy; 2014 Exceptional Realty.</summary>
         <p>All Rights Reserved.</p>
       </details>
  </footer>
