--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <!-- Use a header tag to wrap the h1 and h2 tags instead of a div-->
 
-    <div>
+    <header>
       <h1>Exceptional Header</h1>
       <h2>Really, it is a great header</h2>
-    </div>
+    </header>
 
     <!-- Add a nav tag to wrap these nested links instead of a span-->
     <span>
