--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     </nav>
 
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
-    <div>
+    <main>
+    </main>
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
-      <div>
+    <section>
+      <section>
 
         <!-- Wrap the nested img in a figure tag-->
         <div>
