--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <a href="#" target="_blank">Twitter</a>
           </p>
       </div>
-    </div>
+    <!-- </div> -->
     <!-- End of main part of webpage -->
 
     <!-- Convert this last div so that the contact information and copyright are contained within a footer tag-->
