--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
     <section>
-      <section>
+    </section>
 
         <!-- Wrap the nested img in a figure tag-->
         <div>
