--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <!-- End of main part of webpage -->
 
     <!-- Convert this last div so that the contact information and copyright are contained within a footer tag-->
-    <div>
+    <footer>
       <h3>Contact</h3>
       <p>
         email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
@@ -101,6 +101,6 @@
         <p>All Rights Reserved.</p>
       </div>
     </div>
-
+  </footer> 
   </body>
 </html>
