--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- </div> -->
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
-      <div>
+      <section>
 
         <!-- Wrap the nested video content below with figure tags -->
         <figure>
@@ -57,7 +57,7 @@
           <!-- Wrap this text in a figcaption tag so that it captions the video above-->
           <span>Exceptional Promotional Video - Source: archive.org</span>
         </figure>
-      </div>
+      </section>
 
       <!-- Replace this div with a third section tag -->
       <section>
