--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
       </address>
 
       <!-- Replace the following div with a details tag -->
-      <div>
+      <detail>
         <!-- Replace the following span with a summary tag -->
         <span>&copy; 2014 Exceptional Realty.</span>
         <p>All Rights Reserved.</p>
-      </div>
+      </detail>
   </footer>
   </body>
 </html>
