--- a/index.html
+++ b/index.html
@@ -1,101 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  
+
     <meta charset="UTF-8">
-    <title>Semantic Containers Lab</title>
+    <title>Exceptional Realty Group - Luxury Homes - About</title>
   </head>
   <body>
+    <header>
+      <h1>Exceptional</h1>
+      <h2>Realty Group</h2>
 
-    <!-- Use a header tag to wrap the h1 and h2 tags instead of a div-->
-    <div>
-      <h1>Exceptional Header</h1>
-      <h2>Really, it is a great header</h2>
-    </div>
+    <!-- links -->
+    <nav>
+      <a href="index.html">About</a>
+      <a href="new-properties.html">New Properties</a>
+      <a href="real-estate-listings.html">Listings</a>
+      <a href="market-report.html">Market Report</a>
+      <a href="contact.html">Contact</a>
+      <a href="http://hud.gov" target="_blank">H.U.D.</a>
+    </nav>
+  </header>
+ <main>
+  <section id="featured-property">
+    <article>
+  <h1>First Human Digitizes Brain</h1>
+  <p>In 2018, Chrome Boi became the first human to digitize their brain. They now live in the Internet.</p>
+    </article>
+    <figure>
+      <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+      <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
+    </figure>
 
-    <!-- Add a nav tag to wrap these nested links instead of a span-->
-    <span>
-      <a href="about.html">About</a> <a href="contact.html">Contact</a> <a href="products.html">Products</a>
-    </span>
+      <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
 
-    <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
-    <div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
 
-      <!-- Replace this div with a section tag to better describe this portion of content -->
-      <div>
+  </section>
 
-        <!-- Wrap the nested img in a figure tag-->
-        <div>
-          <img src="images/intro-pic.jpg" alt="An exceptional living room." title="Welcome to Exceptional Living Rooms">
+  <section id="promotional">
+    <!-- promo video -->
+   
+    <figure>
+      <video controls>
+        <source src="videos/real-estate.mp4" type="video/mp4">
+        <source src="videos/real-estate.ogv" type="video/ogg">
+        Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
+      </video>
+      <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
+  </figure>
+  <section>
+  <p>Lorem ipsum dolor sit amet...</p>
+  <p>Lorem ipsum dolor sit amet...</p>
+  </section>
+  </section>
+   </main>
 
-          <!-- Wrap this text in a figcaption tag so that it captions the image above-->
-          <span>"An Exceptional Living Room" by Leonardo DaVinci, photograph</span>
-        </div>
-
-        <!-- Turn this div into an article tag-->
-        <div>
-          <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
-        </div>
-      </div>
-
-      <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
-      <div>
-
-        <!-- Wrap the nested video content below with figure tags -->
-        <div>
-          <video controls>
-            <source src="http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.mp4" type="video/mp4">
-            <source src="http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.ogv" type="video/ogg">
-            Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
-          </video>
-
-          <!-- Wrap this text in a figcaption tag so that it captions the video above-->
-          <span>Exceptional Promotional Video - Source: archive.org</span>
-        </div>
-      </div>
-
-      <!-- Replace this div with a third section tag -->
-      <div>
-          <h3>Links</h3>
-          <p>
-            <a href="#" target="_blank">Home Restoration</a><br>
-            <a href="#" target="_blank">Afordable Mortgages</a><br>
-            <a href="#" target="_blank">Professional Moving Crew</a>
-          </p>
-
-          <h3>Follow Us</h3>
-          <p>
-            <a href="#" target="_blank">Youtube</a><br>
-            <a href="#" target="_blank">Facebook</a><br>
-            <a href="#" target="_blank">Twitter</a>
-          </p>
-      </div>
-    </div>
-    <!-- End of main part of webpage -->
-
-    <!-- Convert this last div so that the contact information and copyright are contained within a footer tag-->
-    <div>
-      <h3>Contact</h3>
-      <p>
-        email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
-        phone: +1 710 555 1234
-      </p>
-      <h3>Correspondence</h3>
-
-      <!-- Use the address tag to contain the following address-->
-      <div>
-        Exceptional Realty<br>
-        P.O.Box 5555<br>
-        Brooklyn, NY 11201
-      </div>
-
-      <!-- Replace the following div with a details tag -->
-      <div>
-        <!-- Replace the following span with a summary tag -->
-        <span>&copy; 2014 Exceptional Realty.</span>
-        <p>All Rights Reserved.</p>
-      </div>
-    </div>
-
+  <footer>
+    <address>
+    </address>
+  <details>
+  <summary>Copyright 1999-2018.</summary>
+  <p> - by Refsnes Data. All Rights Reserved.</p>
+  <p>All content and graphics on this web site are the property of the company Refsnes Data.</p>
+  </details>
+    &copy; 2014 Exceptional Realty. All Rights Reserved.
+  </footer>
   </body>
 </html>
