--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@
   </head>
   
   <body>
-    This is the products page! Nothing goes here.  This exists for the <nav> portion of the lab.
+    This is the products page! Nothing goes here.  This exists for the <code>&lt;nav&gt;</code> portion of the lab.
   </body>
   
 </html>
